--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <span><strong><a href = "https://catalog.unc.edu/undergraduate/programs-study/peace-war-defense-major-ba/" target="_blank">BA: Peace, War, & Defense (International Security and Intelligence)</a></strong> &mdash; UNC Chapel Hill</span>
                     <span>(August 2018 - May 2022)</span>
                 </li>
-                <!-- <li class = "experience_block">
+                <li class = "experience_block">
                     <span><strong><a href = "https://catalog.unc.edu/undergraduate/programs-study/computer-science-major-ba/#text" target="_blank">BA: Computer Science</a></strong> &mdash; UNC Chapel Hill</span>
                     <span>(August 2020 - July 2022)</span>
-                </li> -->
+                </li>
                 <li class = "experience_block">
                     <span><strong>Red Star: Intro to Programming</strong> &mdash; Code The Dream School</span>
                     <span>(August 2021 - December 2021)</span>
