--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         <h2>Skills</h2>
         <ul></ul>
     </section>
+
+    <section id = "projects">
+        <h2>Projects</h2>
+        <ul></ul>
+    </section>
     
 
     <section id = "reach_out">
